update external link.

--- a/en-US.tex
+++ b/en-US.tex
@@ -1,4 +1,4 @@
-\documentclass{cv}
+\documentclass{common}
 
 \begin{document}
 \pagenumbering{gobble}
@@ -6,9 +6,10 @@
 \name{Zhihao Shen}
 
 \basicInfo{
-  \email{zhihaoshen7@gmail.com} \textperiodcentered\ 
-  \github[Sh-Zh-7]{https://github.com/Sh-Zh-7} \textperiodcentered\ 
-  \homepage[https://shzh.me]{https://shzh.me}
+  \email{\underline{zhihaoshen7@gmail.com}} |
+  \homepage[\underline{shzh.me}]{https://shzh.me} |
+  \github[\underline{Sh-Zh-7}]{https://github.com/Sh-Zh-7} |
+  \linkedin[\underline{LinkedIn}]{https://www.linkedin.com/in/}
 }
 
 \section{\faGraduationCap\ Education}
@@ -46,7 +47,6 @@ A lightweight encoding library for various image formats.
 \section{\faInfo\ Miscellaneous}
 \begin{itemize}[parsep=0.5ex]
   \item \textbf{Blog}: \href{https://blog.shzh.me}{https://blog.shzh.me}
-  \item \textbf{Zhihu}: \href{https://www.zhihu.com/people/szh-ngup}{https://www.zhihu.com/people/szh-ngup}
   \item \textbf{Languages}: English - Fluent, Mandarin - Native speaker
 \end{itemize}
 
