add new skills of me.

--- a/en-US.tex
+++ b/en-US.tex
@@ -1,7 +1,6 @@
 \documentclass{common}
 
 \begin{document}
-\pagenumbering{gobble}
 
 \name{Zhihao Shen}
 
@@ -9,24 +8,14 @@
   \email{\underline{zhihaoshen7@gmail.com}} |
   \homepage[\underline{shzh.me}]{https://shzh.me} |
   \github[\underline{Sh-Zh-7}]{https://github.com/Sh-Zh-7} |
-  \linkedin[\underline{LinkedIn}]{https://www.linkedin.com/in/}
+  \linkedin[\underline{LinkedIn}]{https://www.linkedin.com/in/\%E4\%B9\%8B\%E8\%B1\%AA-\%E6\%B2\%88-045439226/}
 }
 
-\section{\faGraduationCap\ Education}
+\section{\faGraduationCap\ education}
 \datedsubsection{\textbf{Wuhan University (WHU)}, Wuhan, China}{2018 -- Present}
 \textit{Undergraduate student} in Computer Science (CS), expected June 2022
 
-% \section{\faUsers\ Experience}
-% \datedsubsection{\textbf{FLAG Inc.} California, America}{2012 -- Present}
-% \role{Summer Intern}{Manager: xxx}
-% Brief introduction: xxx.
-% \begin{itemize}
-%   \item Implemented xxx feature
-%   \item Optimized xxx 5\%
-%   \item xxx
-% \end{itemize}
-
-\section{\faCubes\ Projects}
+\section{\faCubes\ projects}
 \datedsubsection{\textbf{szimg}}{Aug. 2020 -- Present}
 \role{Rust, Maintainer}{Individual Projects}
 A lightweight encoding library for various image formats.
@@ -36,15 +25,15 @@ A lightweight encoding library for various image formats.
   \item Easy to read source code and complete documentation.
 \end{itemize}
 
-\section{\faCogs\ Skills}
+\section{\faCogs\ skills}
 \begin{itemize}[parsep=0.5ex]
   \item \textbf{AI}: Machine Learning, Reinforce Learning
-  \item \textbf{HPC}: C/C++/Rust, ARM/x86 SIMD, OpenMP, MPI
-  \item \textbf{Web Backend}: Java/Go/Kotlin, Sprint Boot/Spring Cloud
+  \item \textbf{HPC}: C/C++/Rust, ARM/x86 SIMD, OpenMP, CUDA, MPI.
+  \item \textbf{Web Backend}: Java/Go/Kotlin, Sprint Boot/Spring Cloud, .etc.
   \item \textbf{Web Frontend}: H5/C3, JS/WASM, TypeScript/ReScript, Vue/React/Angular/Svelte
 \end{itemize}
 
-\section{\faInfo\ Miscellaneous}
+\section{\faInfo\ miscellaneous}
 \begin{itemize}[parsep=0.5ex]
   \item \textbf{Blog}: \href{https://blog.shzh.me}{https://blog.shzh.me}
   \item \textbf{Languages}: English - Fluent, Mandarin - Native speaker
