--- a/en-US.tex
+++ b/en-US.tex
@@ -16,13 +16,21 @@
 \textit{Undergraduate student} in Computer Science (CS), expected June 2022
 
 \section{\faCubes\ projects}
-\datedsubsection{\textbf{szimg}}{Aug. 2020 -- Present}
+\projectsubsection{\textbf{szimg}}{https://github.com/ShZh-websites}{1}{Aug. 2020 -- Present}
 \role{Rust, Maintainer}{Individual Projects}
-A lightweight encoding library for various image formats.
+A Rust encoding library for various image formats.
 \begin{itemize}
-  \item Implemented by new system design language Rust.
+  \item A lightweight and out-of-box crate managed by Cargo.
   \item Support modern image format like WebP, AVIF, .etc.
-  \item Easy to read source code and complete documentation.
+  \item Using SIMD to optimize for x86/ARM platforms.
+\end{itemize}
+\projectsubsection{\textbf{ShZh Websites}}{https://github.com/ShZh-websites}{0}{Sep. 2021 -- Present}
+\role{Vue/Svelte/ReScript/Go, Maintainer}{Individual Projects}
+Collections of my websites, including my personal homepage, blogs, diaries and so on.
+\begin{itemize}
+  \item Modern web technologies such as tailwind, airpline and Gatsby are used.
+  \item Highly optimized for user experience, lighthouse score guaranteed.
+  \item Flexible, responsive design. Not only works in mobile, but also in dark mode.
 \end{itemize}
 
 \section{\faCogs\ skills}
