--- a/en-US.tex
+++ b/en-US.tex
@@ -3,48 +3,54 @@
 \begin{document}
 
 \name{Zhihao Shen}
-
 \basicInfo{
-  \email{\underline{zhihaoshen7@gmail.com}} |
-  \homepage[\underline{shzh.me}]{https://shzh.me} |
-  \github[\underline{Sh-Zh-7}]{https://github.com/Sh-Zh-7} |
-  \linkedin[\underline{LinkedIn}]{https://www.linkedin.com/in/\%E4\%B9\%8B\%E8\%B1\%AA-\%E6\%B2\%88-045439226/}
+    \email{\underline{zhihaoshen7@gmail.com}} |
+    \homepage[\underline{shzh.me}]{https://shzh.me} |
+    \github[\underline{Sh-Zh-7}]{https://github.com/Sh-Zh-7} |
+    \linkedin[\underline{LinkedIn}]{https://www.linkedin.com/in/\%E4\%B9\%8B\%E8\%B1\%AA-\%E6\%B2\%88-045439226/}
 }
 
 \section{\faGraduationCap\ education}
-\datedsubsection{\textbf{Wuhan University (WHU)}, Wuhan, China}{2018 -- Present}
-\textit{Undergraduate student} in Computer Science (CS), expected June 2022
+\educationsubsection
+    {Wuhan University (WHU)}{GPA: 3.69/4.0}{2018 -- Present}
+    {\textit{Undergraduate student} in Computer Science (CS), expected June 2022}{Wuhan, China}
 
 \section{\faCubes\ projects}
-\projectsubsection{\textbf{szimg}}{https://github.com/ShZh-websites}{1}{Aug. 2020 -- Present}
+\projectsubsection
+    {\textbf{szimg}}
+    {https://github.com/ShZh-websites}{1}
+    {Aug. 2020 -- Present}
 \role{Rust, Maintainer}{Individual Projects}
 A Rust encoding library for various image formats.
 \begin{itemize}
-  \item A lightweight and out-of-box crate managed by Cargo.
-  \item Support modern image format like WebP, AVIF, .etc.
-  \item Using SIMD to optimize for x86/ARM platforms.
+    \item A lightweight and out-of-box crate managed by Cargo.
+    \item Support modern image format like WebP, AVIF, .etc.
+    \item Using SIMD to optimize for x86/ARM platforms.
 \end{itemize}
-\projectsubsection{\textbf{ShZh Websites}}{https://github.com/ShZh-websites}{0}{Sep. 2021 -- Present}
+\projectsubsection
+    {\textbf{ShZh Websites}}
+    {https://github.com/ShZh-websites}{0}
+    {Sep. 2021 -- Present}
 \role{Vue/Svelte/ReScript/Go, Maintainer}{Individual Projects}
 Collections of my websites, including my personal homepage, blogs, diaries and so on.
 \begin{itemize}
-  \item Modern web technologies such as tailwind, airpline and Gatsby are used.
-  \item Highly optimized for user experience, lighthouse score guaranteed.
-  \item Flexible, responsive design. Not only works in mobile, but also in dark mode.
+    \item Modern web technologies such as tailwind, airpline and Gatsby are used.
+    \item Highly optimized for user experience, lighthouse score guaranteed.
+    \item Flexible, responsive design. Not only works in mobile, but also in dark mode.
 \end{itemize}
 
 \section{\faCogs\ skills}
 \begin{itemize}[parsep=0.5ex]
-  \item \textbf{AI}: Machine Learning, Reinforce Learning
-  \item \textbf{HPC}: C/C++/Rust, ARM/x86 SIMD, OpenMP, CUDA, MPI.
-  \item \textbf{Web Backend}: Java/Go/Kotlin, Sprint Boot/Spring Cloud, .etc.
-  \item \textbf{Web Frontend}: H5/C3, JS/WASM, TypeScript/ReScript, Vue/React/Angular/Svelte
+    \item \textbf{AI}: Machine Learning, Reinforce Learning
+    \item \textbf{HPC}: C/C++/Rust, ARM/x86 SIMD, OpenMP, CUDA, MPI.
+    \item \textbf{Web Backend}: Java/Go/Kotlin, Sprint Boot/Spring Cloud, .etc.
+    \item \textbf{Web Frontend}: H5/C3, JS/WASM, TypeScript/ReScript, Vue/React/Angular/Svelte
 \end{itemize}
 
 \section{\faInfo\ miscellaneous}
 \begin{itemize}[parsep=0.5ex]
-  \item \textbf{Blog}: \href{https://blog.shzh.me}{https://blog.shzh.me}
-  \item \textbf{Languages}: English - Fluent, Mandarin - Native speaker
+    \item \textbf{Blog}: \href{https://blog.shzh.me}{https://blog.shzh.me}
+    \item \textbf{Languages}: English - Fluent, Mandarin - Native speaker
 \end{itemize}
 
 \end{document}
