--- a/zh-CN.tex
+++ b/zh-CN.tex
@@ -37,7 +37,7 @@
 \role{Vue/Svelte/ReScript/Go, 维护者}{个人项目}
 我个人网站的集合，涵盖了我的个人主页，博客，日志等等。
 \begin{itemize}
-    \item 使用了alpine，tailwind和Gatsby等现代Web技术。
+    \item 使用了Alpine，Tailwind和Gatsby等现代Web技术。
     \item 针对用户体验高度优化，有Lighthouse分数保障。
     \item 灵活的响应式设计，不仅适配了移动端，还有黑暗模式。
 \end{itemize}
