--- a/en-US.tex
+++ b/en-US.tex
@@ -34,9 +34,9 @@ A Rust encoding library for various image formats.
 \role{Vue/Svelte/ReScript/Go, Maintainer}{Individual Projects}
 Collections of my websites, including my personal homepage, blogs, diaries and so on.
 \begin{itemize}
-    \item Modern web technologies such as tailwind, airpline and Gatsby are used.
-    \item Highly optimized for user experience, lighthouse score guaranteed.
-    \item Flexible, responsive design. Not only works in mobile, but also in dark mode.
+    \item Modern web technologies such as Tailwind, Alpline and Gatsby are used.
+    \item Highly optimized for user experience, Lighthouse score guaranteed.
+    \item Flexible, responsive design. Not only works in mobile, but also works in dark mode.
 \end{itemize}
 
 \section{\faCogs\ skills}
