use font without weight specification.

--- a/zh-CN.tex
+++ b/zh-CN.tex
@@ -1,7 +1,7 @@
 \documentclass{common}
 \usepackage{xeCJK}
-\setCJKmainfont{SourceHanSerifSC-Regular}
-\setCJKsansfont{SourceHanSansSC-Regular}
+\setCJKmainfont{思源宋体}
+\setCJKsansfont{思源黑体}
 
 \begin{document}
 
