--- a/zh-CN.tex
+++ b/zh-CN.tex
@@ -7,8 +7,8 @@
 
 \name{沈之豪}
 \basicInfo{
-    \email{\underline{zhihaoshen7@gmail.com}} |
-    \homepage[\underline{shzh.me}]{https://shzh.me} |
+    \email{\underline{i@shzh.me}} |
+    \homepage[\underline{shzh.wiki}]{https://shzh.wiki} |
     \github[\underline{Sh-Zh-7}]{https://github.com/Sh-Zh-7} |
     \linkedin[\underline{LinkedIn}]{https://www.linkedin.com/in/\%E4\%B9\%8B\%E8\%B1\%AA-\%E6\%B2\%88-045439226/}
 }
