update Linkined url.

--- a/zh-CN.tex
+++ b/zh-CN.tex
@@ -10,7 +10,7 @@
     \email{\underline{i@shzh.me}} |
     \homepage[\underline{shzh.wiki}]{https://shzh.wiki} |
     \github[\underline{Sh-Zh-7}]{https://github.com/Sh-Zh-7} |
-    \linkedin[\underline{LinkedIn}]{https://www.linkedin.com/in/\%E4\%B9\%8B\%E8\%B1\%AA-\%E6\%B2\%88-045439226/}
+    \linkedin[\underline{LinkedIn}]{https://www.linkedin.com/in/imshzh7/}
 }
 
 \section{\faGraduationCap\ 教育}
