rewrite misc part.

--- a/zh-CN.tex
+++ b/zh-CN.tex
@@ -52,8 +52,9 @@
 
 \section{\faInfo\ 其他}
 \begin{itemize}[parsep=0.5ex]
-    \item \textbf{博客}: \href{https://blog.shzh.me}{https://blog.shzh.me}
-    \item \textbf{语言}: 英语 - 流畅, 普通话 - 母语
+    \item \textbf{普通话}: 母语
+    \item \textbf{英语}: CET-6: 463 | CET-4: 556
+    \item \textbf{Linktree}: \href{https://linktr.ee/ShZh7}{https://linktr.ee/ShZh7}
 \end{itemize}
 
 \end{document}
