--- a/en-US.tex
+++ b/en-US.tex
@@ -49,8 +49,9 @@ Collections of my websites, including my personal homepage, blogs, diaries and s
 
 \section{\faInfo\ miscellaneous}
 \begin{itemize}[parsep=0.5ex]
-    \item \textbf{Blog}: \href{https://blog.shzh.me}{https://blog.shzh.me}
-    \item \textbf{Languages}: English - Fluent, Mandarin - Native speaker
+    \item \textbf{Mandarin}: Native speaker
+    \item \textbf{English}: CET-6: 463 | CET-4: 556
+    \item \textbf{Linktree}: \href{https://linktr.ee/ShZh7}{https://linktr.ee/ShZh7}
 \end{itemize}
 
 \end{document}
