--- a/zh-CN.tex
+++ b/zh-CN.tex
@@ -42,6 +42,17 @@
     \item 灵活的响应式设计，不仅适配了移动端，还有黑暗模式。
 \end{itemize}
 
+\section{\faTrophy\ 获奖}
+\datedline{\textbf{- 中国软件杯}, 三等奖, \textit{队长}}{2020年8月} 
+\vspace{0.5ex}
+基于计算机视觉的交通场景智能应用。 
+{\href{https://github.com/Sh-Zh-7/intelligent-transportation-system}{\underline{\faGithub}} \faStarO\ 26
+\vspace{0.85ex}
+\datedline{\textbf{- APMCM}, 二等奖}{2019年11月} 
+\vspace{0.5ex}
+关于区域经济活力及其影响因素的分析和决策。 
+\vspace{0.85ex}
+
 \section{\faCogs\ 技能}
 \begin{itemize}[parsep=0.5ex]
     \item \textbf{人工智能}: 机器学习, 强化学习
