--- a/en-US.tex
+++ b/en-US.tex
@@ -17,21 +17,32 @@
 
 \section{\faCubes\ projects}
 \projectsubsection
-    {\textbf{szimg}}
-    {https://github.com/ShZh-websites}{1}
-    {Aug. 2020 -- Present}
-\role{Rust, Maintainer}{Individual Projects}
-A Rust encoding library for various image formats.
+    {\textbf{sznn}}
+    {https://github.com/ShZh-libraries/sznn}{0}
+    {Jan. 2022 -- Apr. 2022}
+\role{Rust/Typescript, Maintainer}{Graduation Projects}
+High performance nerual network inference framework running on Web.
 \begin{itemize}
-    \item A lightweight and out-of-box crate managed by Cargo.
-    \item Support modern image format like WebP, AVIF, .etc.
-    \item Using SIMD to optimize for x86/ARM platforms.
+    \item Pure JS backend is supported.
+    \item Accelerate with WASM SIMD and multithread.
+    \item Using WebGPU to significantly improve the throughput.
+\end{itemize}
+\projectsubsection
+    {\textbf{ShZh Playground}}
+    {https://github.com/ShZh-Playground}{3}
+    {Aug. 2020 -- Present}
+\role{Rust/C++/Java .etc, Maintainer}{Individual Projects}
+Collections of my tools and wheels. Update from time to time.
+\begin{itemize}
+    \item Tiny MIPS CPU and tiny-OS are undergraduate courses' requirements.
+    \item DB, compilers and other projects are made for fun in spare time.
+    \item High level projects like react-like library are also included.
 \end{itemize}
 \projectsubsection
     {\textbf{ShZh Websites}}
     {https://github.com/ShZh-websites}{0}
     {Sep. 2021 -- Present}
-\role{Vue/Svelte/ReScript/Go, Maintainer}{Individual Projects}
+\role{Vue/Svelte/ReScript, Maintainer}{Individual Projects}
 Collections of my websites, including my personal homepage, blogs, diaries and so on.
 \begin{itemize}
     \item Modern web technologies such as Tailwind, Alpline and Gatsby are used.
@@ -55,6 +66,7 @@ Analysis and decision-making of regional economic vitality and its influencing f
 \begin{itemize}[parsep=0.5ex]
     \item \textbf{AI}: Machine Learning, Reinforce Learning
     \item \textbf{HPC}: C/C++/Rust, ARM/x86 SIMD, OpenMP, CUDA, MPI.
+    \item \textbf{DB}: MySQL, Redis/memcached, botDB, levelDB, DuckDB, .etc.
     \item \textbf{Web Backend}: Java/Go/Kotlin, Sprint Boot/Spring Cloud, .etc.
     \item \textbf{Web Frontend}: H5/C3, JS/WASM, TypeScript/ReScript, Vue/React/Angular/Svelte
 \end{itemize}
