--- a/en-US.tex
+++ b/en-US.tex
@@ -33,7 +33,7 @@ High performance nerual network inference framework running on Web.
     {\textbf{ShZh Playground}}
     {https://github.com/ShZh-Playground}{3}
     {Aug. 2020 -- Present}
-\role{Rust/C++/Java .etc, Maintainer}{Individual Projects}
+\role{C++/Rust/Java .etc, Maintainer}{Individual Projects}
 Collections of my tools and wheels. Update from time to time.
 \begin{itemize}
     \item Tiny MIPS CPU and tiny-OS are undergraduate courses' requirements.
@@ -44,7 +44,7 @@ Collections of my tools and wheels. Update from time to time.
     {\textbf{ShZh Websites}}
     {https://github.com/ShZh-websites}{0}
     {Sep. 2021 -- Present}
-\role{Vue/Svelte/ReScript, Maintainer}{Individual Projects}
+\role{Svelte/ReScript/Tex, Maintainer}{Individual Projects}
 Collections of my websites, including my personal homepage, blogs, diaries and so on.
 \begin{itemize}
     \item Modern web technologies such as Tailwind, Alpline and Gatsby are used.
@@ -77,7 +77,7 @@ Analysis and decision-making of regional economic vitality and its influencing f
 \begin{itemize}[parsep=0.5ex]
     \item \textbf{Mandarin}: Native speaker
     \item \textbf{English}: CET-6: 463 | CET-4: 556
-    \item \textbf{Linktree}: \href{https://linktr.ee/ShZh7}{https://linktr.ee/ShZh7}
+    \item \textbf{Linktree}: \href{https://linktr.ee/ShZh7}{\underline{https://linktr.ee/ShZh7}}
 \end{itemize}
 
 \end{document}
