--- a/en-US.tex
+++ b/en-US.tex
@@ -54,15 +54,14 @@ Collections of my websites, including my personal homepage, blogs, diaries and s
 
 
 \section{\faTrophy\ awards}
-\datedline{\textbf{- China Software Cup}, \nth{3} Prize, \textit{Captain}}{Oct. 2020} 
-\vspace{0.5ex}
-Intelligent applications for traffic scenes based on computer vision. 
-{\href{https://github.com/Sh-Zh-7/intelligent-transportation-system}{\underline{\faGithub}} \faStarO\ 26
-\vspace{0.85ex}
-\datedline{\textbf{- APMCM}, \nth{2} Prize}{Nov. 2019} 
-\vspace{0.5ex}
-Analysis and decision-making of regional economic vitality and its influencing factors. 
-\vspace{0.85ex}
+\award
+    {\textbf{- China Software Cup}, \nth{3} Prize, \textit{Captain}}{Oct. 2020}
+    {Intelligent applications for traffic scenes based on computer vision. 
+        {\href{https://github.com/Sh-Zh-7/intelligent-transportation-system}{\underline{\faGithub}} \faStarO\ 26}
+    }
+\award
+    {\textbf{- APMCM}, \nth{2} Prize}{Nov. 2019}
+    {Analysis and decision-making of regional economic vitality and its influencing factors.}
 
 \section{\faCogs\ skills}
 \begin{itemize}[parsep=0.5ex]
