little fix to my English version.

--- a/en-US.tex
+++ b/en-US.tex
@@ -52,7 +52,6 @@ Collections of my websites, including my personal homepage, blogs, diaries and s
     \item Flexible, responsive design. Not only works in mobile, but also works in dark mode.
 \end{itemize}
 
-
 \section{\faTrophy\ awards}
 \award
     {\textbf{- China Software Cup}, \nth{3} Prize, \textit{Captain}}{Oct. 2020}
@@ -66,8 +65,8 @@ Collections of my websites, including my personal homepage, blogs, diaries and s
 \section{\faCogs\ skills}
 \begin{itemize}[parsep=0.5ex]
     \item \textbf{AI}: Machine Learning, Reinforce Learning
-    \item \textbf{HPC}: C/C++/Rust, ARM/x86 SIMD, OpenMP, CUDA, MPI.
-    \item \textbf{DB}: MySQL, Redis/memcached, botDB, levelDB, DuckDB, .etc.
+    \item \textbf{HPC}: C/C++/Rust, ARM/x86 SIMD, OpenMP, CUDA, MPI
+    \item \textbf{DB}: MySQL, Redis/memcached, boltDB, levelDB, DuckDB, .etc.
     \item \textbf{Web Backend}: Java/Go/Kotlin, Sprint Boot/Spring Cloud, .etc.
     \item \textbf{Web Frontend}: H5/C3, JS/WASM, TypeScript/ReScript, Vue/React/Angular/Svelte
 \end{itemize}
