update academic status.

--- a/en-US.tex
+++ b/en-US.tex
@@ -14,8 +14,8 @@
 
 \section{\faGraduationCap\ education}
 \educationsubsection
-    {Wuhan University (WHU)}{GPA: 3.64/4.0}{2018 -- Present}
-    {\textit{Undergraduate student} in Computer Science (CS), expected June 2022}{Wuhan, China}
+    {Wuhan University (WHU)}{GPA: 3.64/4.0}{2018 -- 2022}
+    {\textit{Undergraduate student} in Computer Science (CS). }{Wuhan, China}
 
 \section{\faCubes\ projects}
 \projectsubsection
