--- a/zh-CN.tex
+++ b/zh-CN.tex
@@ -17,8 +17,8 @@
 
 \section{\faGraduationCap\ 教育}
 \educationsubsection
-    {武汉大学 (WHU)}{GPA: 3.64/4.0}{2018 -- 现今}
-    {计算机科学与技术(CS)的\textit{本科生}, 预期2022年6月毕业}{中国\ 武汉}
+    {武汉大学 (WHU)}{GPA: 3.64/4.0}{2018 -- 2022}
+    {计算机科学与技术(CS)的\textit{本科生}。}{中国\ 武汉}
 
 \section{\faCubes\ 项目}
 \projectsubsection
