--- a/zh-CN.tex
+++ b/zh-CN.tex
@@ -3,7 +3,7 @@
 \setCJKmainfont{思源宋体}
 \setCJKsansfont{思源黑体}
 
-\cfoot{\color{gray} 此文件的MD5值为\{\{TBD\}\}.}
+% \cfoot{\color{gray} 此文件的MD5值为\{\{TBD\}\}.}
 
 \begin{document}
 
@@ -17,49 +17,50 @@
 
 \section{\faGraduationCap\ 教育}
 \educationsubsection
-    {武汉大学 (WHU)}{GPA: 3.64/4.0}{2018 -- 2022}
-    {计算机科学与技术(CS)的\textit{本科生}。}{中国\ 武汉}
+    {武汉大学 (WHU)}{GPA: 3.65/4.0}{2018 -- 2022}
+    {计算机学院 | 计算机科学与技术(CS)专业的\textit{本科生}。}{中国\ 武汉}
 
 \section{\faCubes\ 项目}
 \projectsubsection
     {\textbf{sznn}}
-    {https://github.com/ShZh-libraries/sznn}{6}
+    {https://github.com/ShZh-libraries/sznn}{8}
     {2022年2月 -- 2022年4月}
 \role{Rust/Typescript, 维护者}{毕业设计}
-运行在Web上的高性能神经网络推理框架。
+运行在 Web 上的高性能神经网络推理框架。
 \begin{itemize}
-    \item 支持纯Javascript的后端。
-    \item 使用WASM的SIMD和多线程技术进行加速。
-    \item 通过WebGPU技术极大地提高了吞吐量。
-\end{itemize}
-\projectsubsection
-    {\textbf{ShZh Playground}}
-    {https://github.com/ShZh-Playground}{3}
-    {2020年8月 -- 现今}
-\role{C++/Rust/Java 等, 维护者}{个人项目}
-我个人工具和轮子的集合，不定时更新。
-\begin{itemize}
-    \item Tiny MIPS CPU 和 tiny-OS 是本科课程设计的要求。
-    \item 数据库，编译器还有其他项目都是在空闲时间基于兴趣完成的。
-    \item 还有其他类似于 react-like 库这样的高级项目。
+    \item 支持纯 Javascript 的后端，可移植性强。
+    \item 通过 Rust 生成 WASM ，并用其 SIMD 和多线程新特性加速。
+    \item 采用 WebGPU 在 GPU 上进行运算，进一步提高了吞吐量。
 \end{itemize}
 \projectsubsection
     {\textbf{ShZh Websites}}
-    {https://github.com/ShZh-websites}{1}
+    {https://github.com/ShZh-websites}{2}
     {2021年9月 -- 现今}
 \role{Svelte/ReScript/Tex, 维护者}{个人项目}
 我个人网站的集合，涵盖了我的个人主页，博客，日志等等。
 \begin{itemize}
-    \item 使用了 Alpine，Tailwind 和 Gatsby 等现代Web技术。
-    \item 针对用户体验高度优化，有 Lighthouse 分数保障。
-    \item 灵活的响应式设计，不仅适配了移动端，还有黑暗模式。
+    \item 针对用户体验高度优化， Lighthouse 高分保障。
+    \item 使用了 Alpine, Tailwind 和 Gatsby 等现代 Web 技术。
+    \item 拥有适配各种屏幕大小的响应式设计和自适应的黑暗模式。
+\end{itemize}
+\projectsubsection
+    {\textbf{Robot V0}}
+    {https://github.com/Sh-Zh-7/Robot-V0}{1}
+    {2022年5月 -- 现今}
+\role{Kotlin, 维护者}{个人项目}
+我的多功能 Q 群机器人，由 OneBot 协议和 go-cqhttp 强力驱动。
+\begin{itemize}
+    \item 嗅探相关链接并用 OpenGraph 可视化展示。
+    \item 基于 RSSHub 实现高度可扩展的主流社交媒体的订阅。
+    \item 高自由度历史记录查询来替代QQ仅依赖内容的原生查询功能。
+    \item 移植 Twitter 热门的 makeitaquote 和 progress-of-year 等功能。
 \end{itemize}
 
 \section{\faTrophy\ awards}
 \award
     {\textbf{- 中国软件杯}, 三等奖, \textit{队长}}{2020年8月}
     {基于计算机视觉的交通场景智能应用。 
-        {\href{https://github.com/Sh-Zh-7/intelligent-transportation-system}{\underline{\faGithub}} \faStarO\ 30}
+        {\href{https://github.com/Sh-Zh-7/intelligent-transportation-system}{\underline{\faGithub}} \faStarO\ 37}
     }
 \award
     {\textbf{- APMCM}, 二等奖}{2019年11月}
@@ -67,11 +68,10 @@
 
 \section{\faCogs\ 技能}
 \begin{itemize}[parsep=0.5ex]
-    \item \textbf{人工智能}: 机器学习, 强化学习
-    \item \textbf{高性能计算}: C/C++/Rust, ARM/x86 SIMD, OpenMP, CUDA, MPI
-    \item \textbf{数据库}: MySQL, Redis/memcached, boltDB, levelDB, DuckDB, .etc.
-    \item \textbf{Web后端}: Java/Go/Kotlin, Sprint Boot/Spring Cloud, .etc.
-    \item \textbf{Web前端}: H5/C3, JS/WASM, TypeScript/ReScript, Vue/React/Angular/Svelte
+    \item \textbf{高性能计算}: C/Rust, x86 SIMD, OpenMP, CUDA, MPI, .etc.
+    \item \textbf{数据库}: MySQL, Redis, MongoDB, boltDB, levelDB, .etc.
+    \item \textbf{Web 后端}: JVM, Sprint Boot/Spring Cloud, .etc.
+    \item \textbf{Web 前端}: H5/C3, JS/WASM, TypeScript/ReScript, React, .etc.
 \end{itemize}
 
 \section{\faInfo\ 其他}
