replace english word in .

--- a/zh-CN.tex
+++ b/zh-CN.tex
@@ -56,7 +56,7 @@
     \item 移植 Twitter 热门的 makeitaquote 和 progress-of-year 等功能。
 \end{itemize}
 
-\section{\faTrophy\ awards}
+\section{\faTrophy\ 获奖}
 \award
     {\textbf{- 中国软件杯}, 三等奖, \textit{队长}}{2020年8月}
     {基于计算机视觉的交通场景智能应用。 
