--- a/zh-CN.tex
+++ b/zh-CN.tex
@@ -8,6 +8,7 @@
 \begin{document}
 
 \name{沈之豪}
+\vspace{0.3ex}
 \basicInfo{
     \email{\underline{i@shzh.me}} |
     \homepage[\underline{shzh.wiki}]{https://shzh.wiki} |
@@ -15,39 +16,46 @@
     \linkedin[\underline{LinkedIn}]{https://www.linkedin.com/in/imshzh7/}
 }
 
+\vspace{0.5ex}
+
 \section{\faGraduationCap\ 教育}
 \educationsubsection
     {武汉大学 (WHU)}{GPA: 3.65/4.0}{2018 -- 2022}
     {计算机学院 | 计算机科学与技术(CS)专业的\textit{本科生}。}{中国\ 武汉}
+\educationsubsectionwithoutgpa
+    {清华大学 (THU)}{2023 -- 2026 (预期)}
+    {软件学院 | 软件工程(SE)专业的\textit{硕士研究生}。}{中国\ 北京}
+
+\vspace{0.85ex}
 
 \section{\faCubes\ 项目}
 \projectsubsection
     {\textbf{sznn}}
     {https://github.com/ShZh-libraries/sznn}{8}
     {2022年2月 -- 2022年4月}
-\role{Rust/Typescript, 维护者}{毕业设计}
+\role{语言： Rust/Typescript}{毕业设计}
 运行在 Web 上的高性能神经网络推理框架。
 \begin{itemize}
     \item 支持纯 Javascript 的后端，可移植性强。
     \item 通过 Rust 生成 WASM ，并用其 SIMD 和多线程新特性加速。
     \item 采用 WebGPU 在 GPU 上进行运算，进一步提高了吞吐量。
 \end{itemize}
-\projectsubsection
+\projectsubsectionwithoutstar
     {\textbf{ShZh Websites}}
-    {https://github.com/ShZh-websites}{2}
+    {https://github.com/ShZh-websites}
     {2021年9月 -- 现今}
-\role{Svelte/ReScript/Tex, 维护者}{个人项目}
+\role{语言： Svelte/ReScript/Tex}{个人项目}
 我个人网站的集合，涵盖了我的个人主页，博客，日志等等。
 \begin{itemize}
     \item 针对用户体验高度优化， Lighthouse 高分保障。
     \item 使用了 Alpine, Tailwind 和 Gatsby 等现代 Web 技术。
     \item 拥有适配各种屏幕大小的响应式设计和自适应的黑暗模式。
 \end{itemize}
-\projectsubsection
+\projectsubsectionwithoutstar
     {\textbf{Robot V0}}
-    {https://github.com/Sh-Zh-7/Robot-V0}{1}
+    {https://github.com/Sh-Zh-7/Robot-V0}
     {2022年5月 -- 现今}
-\role{Kotlin, 维护者}{个人项目}
+\role{语言： Kotlin}{个人项目}
 我的多功能 Q 群机器人，由 OneBot 协议和 go-cqhttp 强力驱动。
 \begin{itemize}
     \item 嗅探相关链接并用 OpenGraph 可视化展示。
@@ -56,27 +64,24 @@
     \item 移植 Twitter 热门的 makeitaquote 和 progress-of-year 等功能。
 \end{itemize}
 
+\vspace{0.85ex}
+
 \section{\faTrophy\ 获奖}
 \award
     {\textbf{- 中国软件杯}, 三等奖, \textit{队长}}{2020年8月}
     {基于计算机视觉的交通场景智能应用。 
         {\href{https://github.com/Sh-Zh-7/intelligent-transportation-system}{\underline{\faGithub}} \faStarO\ 37}
     }
+\vspace{0.5ex}
 \award
     {\textbf{- APMCM}, 二等奖}{2019年11月}
     {关于区域经济活力及其影响因素的分析和决策。}
 
-\section{\faCogs\ 技能}
-\begin{itemize}[parsep=0.5ex]
-    \item \textbf{高性能计算}: C/Rust, x86 SIMD, OpenMP, CUDA, MPI, .etc.
-    \item \textbf{数据库}: MySQL, Redis, MongoDB, boltDB, levelDB, .etc.
-    \item \textbf{Web 后端}: JVM, Sprint Boot/Spring Cloud, .etc.
-    \item \textbf{Web 前端}: H5/C3, JS/WASM, TypeScript/ReScript, React, .etc.
-\end{itemize}
+\vspace{0.85ex}
 
 \section{\faInfo\ 其他}
 \begin{itemize}[parsep=0.5ex]
-    \item \textbf{普通话}: 母语
+    \item \textbf{爱好}: 体系结构（计算｜存储）
     \item \textbf{英语}: CET-6: 463 | CET-4: 556
     \item \textbf{Linktree}: \href{https://linktr.ee/ShZh7}{\underline{https://linktr.ee/ShZh7}}
 \end{itemize}
